--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/preprocessing' %}active{% endif %}" href="{{ url_for('preprocessing') }}">
+                            <i class="fas fa-cogs me-1"></i> Preprocessing
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if request.path == '/about' %}active{% endif %}" href="{{ url_for('about') }}">
                             <i class="fas fa-info-circle me-1"></i> About
                         </a>
