--- a/templates/app_details.html
+++ b/templates/app_details.html
@@ -50,6 +50,10 @@
                 <a href="{{ url_for('app_reviews', app_id=app.appId) }}" class="btn btn-info mt-2">
                     <i class="fas fa-comments me-1"></i> View Reviews
                 </a>
+
+                <a href="{{ url_for('app_aspect_analysis', app_id=app.appId) }}" class="btn btn-primary mt-2">
+                    <i class="fas fa-chart-pie me-1"></i> Aspect Analysis
+                </a>
             </div>
         </div>
     </div>
@@ -75,7 +79,7 @@
                             <div class="me-2">{{ i }} <i class="fas fa-star text-warning"></i></div>
                             <div class="progress flex-grow-1">
                                 {% set rating_count = app.ratings[i|string] if app.ratings is mapping and i|string in app.ratings else 0 %}
-                                <div class="progress-bar bg-success" 
+                                <div class="progress-bar bg-success"
                                      style="width: {{ (rating_count / app.reviews * 100) if app.reviews and app.reviews > 0 else 0 }}%">
                                 </div>
                             </div>
