--- a/templates/app_reviews.html
+++ b/templates/app_reviews.html
@@ -55,9 +55,14 @@
                     </div>
                 </div>
 
-                <button id="fetchReviewsBtn" class="btn btn-primary">
-                    <i class="fas fa-sync-alt me-1"></i> Fetch Reviews
-                </button>
+                <div class="d-flex">
+                    <button id="fetchReviewsBtn" class="btn btn-primary me-2">
+                        <i class="fas fa-sync-alt me-1"></i> Fetch Reviews
+                    </button>
+                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary">
+                        <i class="fas fa-chart-pie me-1"></i> Aspect-Based Analysis
+                    </a>
+                </div>
             </div>
         </div>
     </div>
