--- a/templates/simple_reviews.html
+++ b/templates/simple_reviews.html
@@ -173,6 +173,9 @@
                     <a href="{{ url_for('app_comparison') }}" class="btn btn-outline-primary">
                         <i class="fas fa-balance-scale me-1"></i>Compare Apps
                     </a>
+                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary">
+                        <i class="fas fa-chart-pie me-1"></i>Aspect Analysis
+                    </a>
                 </div>
             </div>
         </div>
