--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,15 @@
                             <i class="fas fa-home me-1"></i> Home
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if '/aspect-analysis' in request.path %}active{% endif %}" href="{{ url_for('index') }}">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle {% if '/aspect-analysis' in request.path %}active{% endif %}" href="#" id="aspectDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-chart-pie me-1"></i> Aspect Analysis
                         </a>
+                        <ul class="dropdown-menu" aria-labelledby="aspectDropdown">
+                            <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.instagram.android') }}">Instagram</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.whatsapp') }}">WhatsApp</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.facebook.katana') }}">Facebook</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == '/preprocessing' %}active{% endif %}" href="{{ url_for('preprocessing') }}">
