--- a/templates/app_reviews.html
+++ b/templates/app_reviews.html
@@ -86,7 +86,12 @@
 
                 <div class="row mb-4">
                     <div class="col-md-8">
-                        <h5>Preprocessing Steps</h5>
+                        <div class="d-flex justify-content-between align-items-center mb-2">
+                            <h5>Preprocessing Steps</h5>
+                            <a href="{{ url_for('preprocessing') }}" class="btn btn-sm btn-outline-primary">
+                                <i class="fas fa-info-circle me-1"></i> Learn More
+                            </a>
+                        </div>
                         <ol>
                             <li>Convert text to lowercase</li>
                             <li>Remove URLs, punctuation and special characters</li>
