--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,6 +48,16 @@
                             <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.instagram.android') }}">Instagram</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.whatsapp') }}">WhatsApp</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('app_aspect_analysis', app_id='com.facebook.katana') }}">Facebook</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle {% if '/data-analysis' in request.path %}active{% endif %}" href="#" id="dataDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="fas fa-chart-bar me-1"></i> Data Analysis
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dataDropdown">
+                            <li><a class="dropdown-item" href="{{ url_for('app_data_analysis', app_id='com.instagram.android') }}">Instagram</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('app_data_analysis', app_id='com.whatsapp') }}">WhatsApp</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('app_data_analysis', app_id='com.facebook.katana') }}">Facebook</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
