--- a/templates/simple_reviews.html
+++ b/templates/simple_reviews.html
@@ -173,8 +173,11 @@
                     <a href="{{ url_for('app_comparison') }}" class="btn btn-outline-primary">
                         <i class="fas fa-balance-scale me-1"></i>Compare Apps
                     </a>
-                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary">
+                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary me-2">
                         <i class="fas fa-chart-pie me-1"></i>Aspect Analysis
+                    </a>
+                    <a href="{{ url_for('app_data_analysis', app_id=app_id) }}" class="btn btn-outline-primary">
+                        <i class="fas fa-chart-bar me-1"></i>Data Analysis
                     </a>
                 </div>
             </div>
