--- a/templates/app_aspect_analysis.html
+++ b/templates/app_aspect_analysis.html
@@ -171,8 +171,11 @@
                     <a href="{{ url_for('app_details', app_id=app_id) }}" class="btn btn-outline-primary me-2">
                         <i class="fas fa-info-circle me-1"></i> App Details
                     </a>
-                    <a href="{{ url_for('app_reviews', app_id=app_id) }}" class="btn btn-outline-primary">
+                    <a href="{{ url_for('app_reviews', app_id=app_id) }}" class="btn btn-outline-primary me-2">
                         <i class="fas fa-comments me-1"></i> Reviews
+                    </a>
+                    <a href="{{ url_for('app_tfidf_analysis', app_id=app_id) }}" class="btn btn-outline-success">
+                        <i class="fas fa-search me-1"></i> TF-IDF Analysis
                     </a>
                 </div>
             </div>
