--- a/templates/app_details.html
+++ b/templates/app_details.html
@@ -54,6 +54,10 @@
                 <a href="{{ url_for('app_aspect_analysis', app_id=app.appId) }}" class="btn btn-primary mt-2">
                     <i class="fas fa-chart-pie me-1"></i> Aspect Analysis
                 </a>
+
+                <a href="{{ url_for('app_tfidf_analysis', app_id=app.appId) }}" class="btn btn-success mt-2">
+                    <i class="fas fa-search me-1"></i> TF-IDF Analysis
+                </a>
             </div>
         </div>
     </div>
