--- a/templates/app_reviews.html
+++ b/templates/app_reviews.html
@@ -59,8 +59,11 @@
                     <button id="fetchReviewsBtn" class="btn btn-primary me-2">
                         <i class="fas fa-sync-alt me-1"></i> Fetch Reviews
                     </button>
-                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary">
+                    <a href="{{ url_for('app_aspect_analysis', app_id=app_id) }}" class="btn btn-outline-primary me-2">
                         <i class="fas fa-chart-pie me-1"></i> Aspect-Based Analysis
+                    </a>
+                    <a href="{{ url_for('app_tfidf_analysis', app_id=app_id) }}" class="btn btn-outline-success">
+                        <i class="fas fa-search me-1"></i> TF-IDF Analysis
                     </a>
                 </div>
             </div>
